--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <script src="./vendor/jquery-3.4.1.min.js"></script>
         <script src="./vendor/bootstrap.bundle.min.js"></script>
-        <script src="./AgoraRTC_N-4.8.1.js"></script>
+        <script src="./vendor/AgoraRTC_N-4.10.2.js"></script>
         <script src="./canvas-control.js"></script>
         <script src="./index.js"></script>
     </body>
