Implement mute using noise gate, so metadata is still transmitted and audio is artifact-free

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="button-group">
                     <button id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
                     <button id="leave" type="button" class="btn btn-primary btn-sm" disabled>Leave</button>
+                    <button id="mute" type="button" class="btn btn-primary btn-sm" hidden>Mute</button>
                     <button id="sound" type="button" class="btn btn-primary btn-sm" style="float:right;" hidden>Sound</button>
                     <input id='threshold' type='range' min=-96 max=0 value=-40 step=1>Threshold=<output id="threshold-value">-40</output>
                 </div>
