--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <p class="join-info-text">Channel</p>
                         <input id="channel" type="text" value="hifi-demo" required>
                         <input id="password" type="text" placeholder="password" required>
+                        <input id="username" type="text" placeholder="username">
                     </div>
                 </div>
                 <div class="button-group">
