deploy without webpack

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -47,8 +47,10 @@
         <script src="./vendor/jquery-3.4.1.min.js"></script>
         <script src="./vendor/bootstrap.bundle.min.js"></script>
         <script src="./vendor/AgoraRTC_N-4.11.0.js"></script>
-        <script src="./HighFidelityAudio-latest.js"></script>
+        <!-- <script src="./HighFidelityAudio-latest.js"></script> -->
+        <script src="./classes/patch-rtc-peer-connection.js"></script>
+        <!-- <script type="module" src="./classes/HiFiCommunicator.js"></script> -->
         <script src="./canvas-control.js"></script>
-        <script src="./main.js"></script>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
