Implement 2D listener orientation, for audio processing and GUI

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </form>
             <div class="canvas-group" style="width:100%; text-align: center;">
-                <canvas id="canvas"></canvas>
+                <canvas id="canvas" oncontextmenu="return false;"></canvas>
                 <img src="listener.svg" class="icon" alt="listener" id="listenerIcon" hidden>
                 <img src="source.svg" class="icon" alt="source" id="sourceIcon" hidden>
             </div>
