CRASHFIX: Work around Chrome/Windows bug. Now works reliably on Chrome and Safari.

--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
         <script src="./vendor/AgoraRTC_N-4.11.0.js"></script>
         <script src="./canvas-control.js"></script>
         <script src="./index.js"></script>
+        <script src="./transform.js"></script>
     </body>
 </html>
