--- a/example/index.html
+++ b/example/index.html
@@ -47,6 +47,6 @@
         <script src="./vendor/jquery-3.4.1.min.js"></script>
         <script src="./vendor/bootstrap.bundle.min.js"></script>
         <script src="./vendor/AgoraRTC_N-4.11.0.js"></script>
-        <script src="./audio-room.js"></script>
+        <script type="module" src="./audio-room.js"></script>
     </body>
 </html>
