fix window resizing, fix sound-injector button

--- a/example/index.html
+++ b/example/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./vendor/bootstrap.min.css">
     <link rel="stylesheet" href="./index.css">
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <div hidden>
       <input id="appid" type="text" value="366ef844621b07594078146f4433647a" required>
     </div>
 
     <form id="join-form">
-      <div class="main-page">
-        <div class="top-bar">
+      <div class="main-page" id="main-page">
+        <div class="top-bar" id="top-bar">
 
           <div class="room-user-join-grid">
             <div class="logo">
@@ -38,9 +38,9 @@
         </div>
 
 
-        <div class="lower-page">
+        <div class="lower-page" id="lower-page">
 
-          <div class="controls-and-rooms">
+          <div class="controls-and-rooms" id="controls-and-rooms">
             <div class="controls">
               <p class="controls-all-cols">Audio Controls</p>
 
@@ -78,15 +78,16 @@
 
           </div>
 
-          <div class="canvas-group" style="height: 100%">
+          <div class="canvas-group" id="canvas-container" style="height: 100%">
             <canvas id="canvas" oncontextmenu="return false;"></canvas>
-            <img src="listener.svg" class="icon" alt="listener" id="listenerIcon" hidden>
-            <img src="source.svg" class="icon" alt="source" id="sourceIcon" hidden>
           </div>
         </div>
 
       </div>
     </form>
+
+    <img src="listener.svg" class="icon" alt="listener" id="listenerIcon" hidden>
+    <img src="source.svg" class="icon" alt="source" id="sourceIcon" hidden>
 
     <script src="./vendor/jquery-3.4.1.min.js"></script>
     <script src="./vendor/bootstrap.bundle.min.js"></script>
