--- a/example/index.html
+++ b/example/index.html
@@ -59,7 +59,7 @@
               <p></p>
               <p class="control-label">Mic Threshold</p>
               <div class="controls-all-cols" style="display: flex; align-self: flex-start; margin: 0;">
-                <input id="threshold" style="margin-left: 10px; margin-right: 10px" type="range"
+                <input id="threshold" style="margin-left: 10px; margin-right: 10px; width: 100%;" type="range"
                        min=-96 max=0 value=-40 step=1>
               </div>
               <div class="controls-all-cols" style="display: flex;">
