--- a/example/index.html
+++ b/example/index.html
@@ -58,15 +58,14 @@
               </label>
               <p class="control-label">Cancel Echo</p>
 
-              <p></p>
-              <p class="control-label">Mic Threshold</p>
+              <div class="controls-all-cols" style="display: flex;">
+                <p class="control-label">Noise Threshold:</p>
+                <output class="controls-all-cols control-label" id="threshold-value">-40</output>
+              </div>
+
               <div class="controls-all-cols" style="display: flex; align-self: flex-start; margin: 0;">
                 <input id="threshold" style="margin-left: 10px; margin-right: 10px; width: 100%;" type="range"
                        min=-96 max=0 value=-40 step=1>
-              </div>
-              <div class="controls-all-cols" style="display: flex;">
-                <p>Noise Threshold:</p>
-                <output class="controls-all-cols" id="threshold-value">-40</output>
               </div>
             </div>
 
