videos are left-to-right now

--- a/example/index.html
+++ b/example/index.html
@@ -81,12 +81,12 @@
 
           </div>
 
-          <div class="canvas-group" id="canvas-container" style="height: 100%">
+          <div id="canvas-container" class="canvas-group" style="height: 100%">
             <canvas id="canvas" oncontextmenu="return false;"></canvas>
           </div>
 
-          <div id="playerlist" class="canvas-group row justify-content-center" style="height: 100%">
-            <div id="player-wrapper-0" data-id="0">
+          <div id="playerlist" class="player-list row justify-content-center">
+            <div id="player-wrapper-0" data-id="0" class="player-wrapper">
               <div id="local-player" class="player"></div>
               <p id="local-player-name" class="player-name"></p>
             </div>
