hook up room-wants-metadata flag.  don't enable join button until websocket is connected.

--- a/example/index.html
+++ b/example/index.html
@@ -29,7 +29,7 @@
             <div><input class="text-entry" id="channel" type="text" value="hifi-demo" required></div>
             <div><input class="text-entry" id="username" type="text" placeholder="username"></div>
             <div>
-              <button id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
+              <button disabled id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
               <button disabled id="leave" type="button" class="btn btn-primary btn-sm" disabled>Leave</button>
               <!--
               <button id="sound" type="button" class="btn btn-primary btn-sm" style="float: right;" hidden>Sound</button>
