--- a/example/index.html
+++ b/example/index.html
@@ -19,7 +19,9 @@
 
           <div class="room-user-join-grid">
             <div class="logo-div">
-              <img class="logo" src="Logo-HighFidelity-Line-PrimaryBlue.svg" alt="High Fidelity"><br>
+              <!-- <img class="logo" src="Logo-HighFidelity-Line-PrimaryBlue.svg" alt="High Fidelity"> -->
+              <img class="logo" src="High-Fidelity_Imagery_Brand_Logo_Left-Lockup_Black_v01.svg" alt="High Fidelity">
+              <br>
               <div class="logo-label"><p>Spatial Audio Demo</p></div>
             </div>
 
