--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Spatial Audio Room</title>
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="safari-pinned-tab.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./vendor/bootstrap.min.css">
     <link rel="stylesheet" href="./index.css">
   </head>
