try reusing audioElement

--- a/example/index.html
+++ b/example/index.html
@@ -112,6 +112,10 @@
             </div>
           </div>
 
+          <div id="continue-dialog" class="continue-dialog">
+              <button disabled id="continue" type="submit" class="btn btn-primary btn-sm">Continue...</button>
+          </div>
+
         </div>
 
       </div>
