make continue button large and center it

--- a/example/index.html
+++ b/example/index.html
@@ -113,7 +113,7 @@
           </div>
 
           <div id="continue-dialog" class="continue-dialog">
-              <button disabled id="continue" type="submit" class="btn btn-primary btn-sm">Continue...</button>
+              <button disabled id="continue" type="submit" class="btn btn-primary btn-sm continue-button">Continue...</button>
           </div>
 
         </div>
