--- a/example/index.html
+++ b/example/index.html
@@ -84,7 +84,7 @@
               </div>
 
               <div class="controls-all-cols" style="display: flex; align-self: flex-start; margin: 0;">
-                <input id="threshold" style="margin-left: 10px; margin-right: 10px; width: 100%;" type="range"
+                <input id="threshold" style="margin-left: 10px; margin-right: 10px; width: 185px;" type="range"
                        min=-96 max=0 value=-40 step=1>
               </div>
             </div>
