--- a/example/index-mobile.html
+++ b/example/index-mobile.html
@@ -37,7 +37,6 @@
             <div class="logo-name-joinleave" id="logo-name-joinleave">
               <div class="logo-div">
                 <img class="logo" src="High-Fidelity_Imagery_Brand_Logo_Top-Right-Lockup_Black_v01-01.svg" alt="High Fidelity">
-                <br>
                 <div class="logo-label"><p style="margin: 0px;">Spatial Audio Demo</p></div>
               </div>
 
@@ -47,39 +46,44 @@
               </div>
 
               <div class="join-leave-buttons" id="join-leave-buttons">
-                <button disabled id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
-                <button disabled id="leave" type="button" class="btn btn-primary btn-sm">Leave</button>
+                <button disabled id="join" type="submit" style="margin-right:5px;" class="btn btn-primary btn-sm">Join</button>
+                <button disabled id="leave" type="button" style="margin-left:5px;" class="btn btn-primary btn-sm">Leave</button>
               </div>
             </div>
 
-            <div class="controls">
-              <p class="controls-all-cols">Audio Controls</p>
+            <div class="controls-and-label">
+              <p class="box-label">Audio Controls</p>
+              <div class="controls">
 
-              <label class="switch">
-                <input id="mute" type="checkbox">
-                <span class="slider round"></span>
-              </label>
-              <p class="control-label">Mute</p>
+                <div class="mute-and-echo">
+                  <p class="control-label">Mute</p>
+                  <p class="control-label">Cancel Echo</p>
 
-              <label class="switch">
-                <input id="aec" type="checkbox">
-                <span class="slider round"></span>
-              </label>
-              <p class="control-label">Cancel Echo</p>
+                  <label class="switch">
+                    <input id="mute" type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
 
-              <div class="controls-all-cols" style="display: flex;">
-                <p class="control-label">Noise Threshold:</p>
-                <output class="controls-all-cols control-label" id="threshold-value">-40</output>
-              </div>
+                  <label class="switch">
+                    <input id="aec" type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
+                </div>
 
-              <div class="controls-all-cols" style="display: flex; align-self: flex-start; margin: 0;">
-                <input id="threshold" style="margin-left: 10px; margin-right: 10px; width: 185px;" type="range"
-                       min=-96 max=0 value=-40 step=1>
+                <div class="thresh-and-label">
+                  <div style="display: flex;">
+                    <p class="control-label">Noise Threshold:</p>
+                    <output class="controls-all-cols control-label" id="threshold-value">-40</output>
+                  </div>
+
+                  <input id="threshold" style="margin-left: 0px; margin-right: 10px;" type="range"
+                         min=-96 max=0 value=-40 step=1>
+                </div>
               </div>
             </div>
 
             <div class="rooms" id="rooms">
-              <p class="rooms-label">Demo Rooms</p>
+              <p class="box-label">Demo Rooms</p>
               <div class="room-buttons" id="room-buttons">
                 <button disabled id="room-conf-table" type="button" class="btn btn-primary btn-sm rooms-button">Conf Table</button>
                 <button disabled id="room-quad-music" type="button" class="btn btn-primary btn-sm rooms-button">Quad Music</button>
@@ -92,6 +96,9 @@
 
 
         <div class="lower-page" id="lower-page">
+
+          <div class="left-bar" id="left-bar">
+          </div>
 
           <div id="canvas-container" class="canvas-group" style="height: 100%">
             <canvas id="canvas" oncontextmenu="return false;"></canvas>
