--- a/example/index.html
+++ b/example/index.html
@@ -42,7 +42,7 @@
 
           <div>
             <div class="logo-div mb-5">
-              <img class="logo" src="/assets/logo-white.svg" alt="High Fidelity" height="60" width="148">
+              <img class="logo" src="logo-white.svg" alt="High Fidelity" height="60" width="148">
             </div>
 
             <div class="user-name-and-label" id="user-name-and-label">
