Updates with tighter UI

--- a/example/index.html
+++ b/example/index.html
@@ -41,12 +41,9 @@
         <div class="controls-and-rooms" id="controls-and-rooms">
 
           <div>
-            <div class="logo-div mb-5">
-              <img class="logo" src="/assets/logo-white.svg" alt="High Fidelity" height="60" width="148">
-            </div>
 
             <div class="user-name-and-label" id="user-name-and-label">
-              <p class="lead">
+              <p >
                 User Info
               </p>
               <div><input class="text-entry" id="username" type="text" placeholder="username"></div>
@@ -54,31 +51,33 @@
 
             <div class="join-leave-buttons" id="join-leave-buttons">
               <button disabled id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
-              <button disabled id="leave" type="button" class="btn btn-primary btn-sm">Leave</button>
             </div>
           </div>
 
 
           <div class="controls">
-            <p class="controls-all-cols lead">
+            <p class="controls-all-cols mb-0">
               Audio Controls
             </p>
 
             <div class="d-flex align-items-center">
-              <label class="switch">
-                <input id="mute" type="checkbox">
-                <span class="slider round"></span>
-              </label>
-              <p class="control-label mb-0">Mute</p>
+              <div class="d-flex align-items-center">
+                <label class="switch">
+                  <input id="mute" type="checkbox">
+                  <span class="slider round"></span>
+                </label>
+                <p class="control-label mb-0 ml-2">Mute</p>
+              </div>
+
+              <div class="d-flex align-items-center ml-2">
+                <label class="switch">
+                  <input id="aec" type="checkbox">
+                  <span class="slider round"></span>
+                </label>
+                <p class="control-label mb-0 ml-2">AEC</p>
+              </div>
             </div>
 
-            <div class="d-flex align-items-center">
-              <label class="switch">
-                <input id="aec" type="checkbox">
-                <span class="slider round"></span>
-              </label>
-              <p class="control-label mb-0">Cancel Echo</p>
-            </div>
 
 
             <div>
@@ -96,11 +95,56 @@
 
 
           <div class="rooms">
-            <p class="lead mb-0">Demo Rooms</p>
-            <button disabled id="room-conf-table" type="button" class="btn btn-white btn-sm rooms-button">Conf Table</button>
-            <button disabled id="room-quad-music" type="button" class="btn btn-white btn-sm rooms-button">Quad Music</button>
-            <button disabled id="room-bar" type="button" class="btn btn-white btn-sm rooms-button">Bar</button>
-            <button disabled id="room-video" type="button" class="btn btn-white btn-sm rooms-button">Video</button>
+            <p class="mb-0">Demo Rooms</p>
+            <div class="rooms-btns">
+              <button disabled id="room-conf-table" type="button" class="rooms-button">
+                <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="17" cy="17" r="17"/>
+                  <path d="M24.3658 21.1218C24.7245 20.7435 24.9453 20.2331 24.9453 19.6719C24.9453 18.8367 24.4574 18.1134 23.7517 17.7719C23.3071 15.5909 21.8218 13.7322 19.7991 12.8364C19.5071 12.3182 19.0728 11.8881 18.5469 11.5975C18.9324 11.2019 19.1445 10.6886 19.1445 10.1445C19.1445 8.98209 18.1624 8 17 8C15.8376 8 14.8555 8.98209 14.8555 10.1445C14.8555 10.6886 15.0676 11.2019 15.4532 11.5975C14.9282 11.8875 14.4935 12.3172 14.201 12.8364C12.1783 13.7322 10.693 15.5909 10.2483 17.7719C9.54259 18.1134 9.05469 18.8367 9.05469 19.6719C9.05469 20.2331 9.27547 20.7435 9.6342 21.1218C8.66059 21.6619 8 22.7005 8 23.8906V24.418C8 24.7092 8.23611 24.9453 8.52734 24.9453H13.3149C14.3973 25.6263 15.6991 26 17 26C18.3009 26 19.6027 25.6263 20.6851 24.9453H25.4727C25.7639 24.9453 26 24.7092 26 24.418V23.8906C26 22.7005 25.3394 21.6619 24.3658 21.1218ZM23.8906 19.6719C23.8906 20.2534 23.4175 20.7266 22.8359 20.7266C22.2544 20.7266 21.7812 20.2534 21.7812 19.6719C21.7812 19.0903 22.2544 18.6172 22.8359 18.6172C23.4175 18.6172 23.8906 19.0903 23.8906 19.6719ZM17 9.05469C17.5806 9.05469 18.0898 9.56396 18.0898 10.1445C18.0898 10.7162 17.5908 11.1992 17 11.1992C16.4092 11.1992 15.9102 10.7162 15.9102 10.1445C15.9102 9.56396 16.4194 9.05469 17 9.05469ZM17 12.2539C18.1825 12.2539 19.1445 13.2002 19.1445 14.3633H14.8555C14.8555 13.2002 15.8175 12.2539 17 12.2539ZM11.1641 18.6172C11.7456 18.6172 12.2188 19.0903 12.2188 19.6719C12.2188 20.2534 11.7456 20.7266 11.1641 20.7266C10.5825 20.7266 10.1094 20.2534 10.1094 19.6719C10.1094 19.0903 10.5825 18.6172 11.1641 18.6172ZM9.05469 23.8906C9.05469 22.7275 10.001 21.7812 11.1641 21.7812C12.3272 21.7812 13.2734 22.7275 13.2734 23.8906H9.05469ZM19.6719 23.8906V24.3083C18.8558 24.7219 17.9282 24.9453 17 24.9453C16.0718 24.9453 15.1442 24.7219 14.3281 24.3083V23.8906C14.3281 22.7005 13.6675 21.6619 12.6939 21.1218C13.0527 20.7435 13.2734 20.2331 13.2734 19.6719C13.2734 18.5818 12.4423 17.6822 11.3804 17.5735C11.7633 16.2072 12.6325 15.0211 13.8036 14.2506C13.8023 14.2881 13.8008 14.3256 13.8008 14.3633V14.8906C13.8008 15.1819 14.0369 15.418 14.3281 15.418H19.6719C19.9631 15.418 20.1992 15.1819 20.1992 14.8906V14.3633C20.1992 14.3256 20.1977 14.2881 20.1964 14.2506C21.3675 15.0211 22.2367 16.2072 22.6196 17.5735C21.5577 17.6822 20.7266 18.5818 20.7266 19.6719C20.7266 20.2331 20.9473 20.7435 21.3061 21.1218C20.3325 21.6619 19.6719 22.7005 19.6719 23.8906ZM20.7266 23.8906C20.7266 22.7275 21.6728 21.7812 22.8359 21.7812C23.999 21.7812 24.9453 22.7275 24.9453 23.8906H20.7266Z" fill="#FF55BA"/>
+                </svg>
+                <div>Conference</div>
+              </button>
+              <button disabled id="room-quad-music" type="button" class="rooms-button">
+                <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="17" cy="17" r="17"/>
+                  <g clip-path="url(#clip0_779_279)">
+                    <path
+                      d="M21.5939 8.94049C20.9259 8.94049 20.35 9.29261 19.8728 9.89153L15.0781 12.9191H12.6758C10.6191 12.9191 8.9375 14.5645 8.9375 16.5883V17.3781C8.9375 19.4019 10.6191 21.0473 12.6758 21.0473H15.0781L19.807 24.042C20.2973 24.6804 20.893 25.0621 21.5972 25.0621C23.8613 25.0621 25.0624 21.0144 25.0624 17.003C25.0624 12.9915 23.858 8.94049 21.5939 8.94049ZM15.6244 19.8495C15.5224 19.7804 15.4171 19.7475 15.2822 19.7475H12.6758C11.3398 19.7475 10.2736 18.6846 10.2736 17.4143V16.6245C10.2736 15.3214 11.3365 14.2913 12.6758 14.2913H15.2822C15.3842 14.2913 15.5224 14.2584 15.6244 14.1893L18.7638 12.1918C18.3426 13.5937 18.1287 15.3016 18.1287 16.9997C18.1287 18.7142 18.3426 20.4353 18.7638 21.8437L15.6244 19.8495ZM21.5939 23.7261C20.7844 23.7261 19.6096 21.406 19.4779 17.6907H20.3237C20.6659 17.6907 20.9752 17.3814 21.0082 17.0062C21.0082 16.6278 20.6988 16.3218 20.3237 16.3218H19.4779C19.6096 12.6032 20.7844 10.2864 21.5939 10.2864C22.4528 10.2864 23.7198 12.8927 23.7198 17.0095C23.7198 21.1263 22.4495 23.7261 21.5939 23.7261Z"
+                      fill="#FF55BA" />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_779_279">
+                      <rect width="16.1249" height="16.1249" transform="translate(8.9375 8.93756)" />
+                    </clipPath>
+                  </defs>
+                </svg>
+                <div>Music</div>
+              </button>
+              <button disabled id="room-bar" type="button" class="rooms-button">
+                <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="17" cy="17" r="17" fill="white" />
+                  <g clip-path="url(#clip0_794_131)">
+                    <path
+                      d="M23.78 9.4C23.82 9.18 23.77 8.96 23.63 8.79C23.48 8.61 23.27 8.5 23.03 8.5H15.11C11.89 8.5 10.95 8.5 10.65 8.54V8.51C10.43 8.54 10.24 8.67 10.12 8.85C10 9.03 9.97 9.25 10.03 9.46C10.03 9.46 10.05 9.56 10.08 9.67L10.2 10.14C11.56 15.33 11.55 19.04 11.54 22.63V23.58C11.54 24.56 12.34 25.36 13.32 25.36H20.48C21.46 25.36 22.26 24.56 22.26 23.58V22.66C22.26 18.22 22.25 15.29 23.77 9.44V9.4H23.78ZM13.06 21.64C14.04 22.71 15.41 23.31 16.9 23.31C18.39 23.31 19.76 22.71 20.74 21.64V23.58C20.74 23.72 20.62 23.84 20.48 23.84H13.32C13.18 23.84 13.06 23.72 13.06 23.58V21.64V21.64ZM16.9 21.79C15.05 21.79 13.51 20.46 13.23 18.64C13.08 17.66 12.96 16.82 12.86 16.05C12.56 13.9 12.34 12.32 11.75 10.02H22.05C21.46 12.34 21.24 13.92 20.94 16.06C20.83 16.83 20.72 17.66 20.57 18.63C20.29 20.46 18.75 21.78 16.9 21.78V21.79Z"
+                      fill="#FF55BA" />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_794_131">
+                      <rect width="14" height="17" fill="white" transform="translate(10 8.5)" />
+                    </clipPath>
+                  </defs>
+                </svg>
+                <div>Bar</div>
+              </button>
+              <button disabled id="room-video" type="button" class="rooms-button">
+                <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="17" cy="17" r="17"/>
+                  <path d="M23.8643 9.5H12.7262C12.3766 9.5 12.0882 9.78834 12.0882 10.138V12.1472L10.5575 10.6166C10.3029 10.3528 9.55447 10.316 9.50539 11.0644V18.6595C9.46551 19.0215 10.0391 19.5767 10.5575 19.1074L12.0882 17.5767V19.5859C12.0882 19.9356 12.3766 20.2239 12.7262 20.2239H15.987C15.9624 20.4018 15.9471 20.5828 15.9471 20.7669C15.9471 22.8405 17.5759 24.5 19.6158 24.5C21.625 24.5 23.2845 22.8405 23.2845 20.7669C23.2845 20.5706 23.2692 20.3804 23.2416 20.1933H23.8581C24.2078 20.1933 24.4962 19.9049 24.4962 19.5552V10.138C24.5023 9.78834 24.214 9.5 23.8643 9.5ZM19.6189 23.2546C18.2784 23.2546 17.1925 22.138 17.1925 20.7669C17.1925 19.3957 18.2784 18.2791 19.6189 18.2791C20.9593 18.2791 22.0452 19.3957 22.0452 20.7669C22.0452 22.138 20.9594 23.2546 19.6189 23.2546ZM23.2569 18.9141H22.8121C22.1863 17.7883 20.9962 17.0307 19.6189 17.0307C18.2508 17.0307 17.0452 17.8006 16.4133 18.9448H13.3643V16.0399C13.4072 15.7423 12.8888 15.1074 12.3121 15.592L10.7814 17.1227V12.5644L12.3121 14.0951C12.9133 14.5521 13.3827 14.0092 13.3643 13.6472V10.7454H23.2569V18.9141Z" fill="#FF55BA"/>
+                  <path d="M20.4501 19.9692L19.1403 20.7667L18.9807 20.5121C18.7906 20.1931 18.4071 20.098 18.1188 20.2882C17.7998 20.4784 17.7047 20.8618 17.8949 21.1501L18.3734 21.9477C18.6341 22.3649 19.1157 22.3219 19.266 22.1716L21.1157 21.0213C21.4041 20.8311 21.4992 20.4477 21.3059 20.1593C21.1188 19.871 20.7354 19.7759 20.4501 19.9692Z" fill="#FF55BA"/>
+                </svg>
+                <div>Video</div>
+              </button>
+            </div>
           </div>
 
         </div>
