--- a/example/index.html
+++ b/example/index.html
@@ -40,30 +40,30 @@
 
         <div class="controls-and-rooms" id="controls-and-rooms">
 
-          <div>
+          <div class="d-flex d-md-block align-items-center">
 
             <div class="user-name-and-label" id="user-name-and-label">
-              <p >
+              <p class="d-none d-md-block">
                 User Info
               </p>
               <div><input class="text-entry" id="username" type="text" placeholder="username"></div>
             </div>
 
-            <div class="join-leave-buttons" id="join-leave-buttons">
+            <div class="join-leave-buttons mt-md-3 ml-4 ml-md-0" id="join-leave-buttons">
               <button disabled id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
             </div>
           </div>
 
 
           <div class="controls">
-            <p class="controls-all-cols mb-0">
+            <p class="controls-all-cols mb-0 d-none d-md-block">
               Audio Controls
             </p>
 
             <div class="d-flex align-items-center">
               <div class="d-flex align-items-center">
                 <label class="switch">
-                  <input id="mute" type="checkbox">
+                  <input id="mute" type="checkbox" checked>
                   <span class="slider round"></span>
                 </label>
                 <p class="control-label mb-0 ml-2">Mute</p>
@@ -81,13 +81,14 @@
 
 
             <div>
-              <div class="controls-all-cols d-flex">
-                <p class="control-label">Noise Threshold:</p>
-                <output class="controls-all-cols control-label mb-0 ml-2" id="threshold-value">-40</output>
-              </div>
+
               <div class="controls-all-cols">
                 <input id="threshold" style="width: 100%;" type="range" min=-96
                   max=0 value=-40 step=1>
+              </div>
+              <div class="controls-all-cols d-flex mt-3">
+                <p class="control-label mb-0 ">Noise Threshold:</p>
+                <output class="controls-all-cols control-label mb-0 ml-2" id="threshold-value">-40</output>
               </div>
             </div>
 
@@ -95,7 +96,7 @@
 
 
           <div class="rooms">
-            <p class="mb-0">Demo Rooms</p>
+            <p class="mb-0 d-none d-md-block">Demo Rooms</p>
             <div class="rooms-btns">
               <button disabled id="room-conf-table" type="button" class="rooms-button">
                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
