Hide disabled buttons

--- a/example/index.html
+++ b/example/index.html
@@ -51,6 +51,7 @@
 
             <div class="join-leave-buttons mt-md-3 ml-4 ml-md-0" id="join-leave-buttons">
               <button disabled id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
+              <button disabled id="leave" type="button" class="btn btn-primary btn-sm">Leave</button>
             </div>
           </div>
 
