Active button and tablet fixes

--- a/example/index.html
+++ b/example/index.html
@@ -21,8 +21,7 @@
   <!--
     <link rel="prefetch" href="hifi.wasm.simd.js">
     <link rel="prefetch" href="hifi.wasm.js">
-    <link rel="prefetch" href="worker.js">
-    <link rel="prefetch" href="worker-transform.js">
+    <link rel="prefetch" href="worker.js">    <link rel="prefetch" href="worker-transform.js">
     -->
 
 </head>
@@ -40,16 +39,16 @@
 
         <div class="controls-and-rooms" id="controls-and-rooms">
 
-          <div class="d-flex d-md-block align-items-center">
+          <div class="d-flex d-lg-block align-items-center">
 
             <div class="user-name-and-label" id="user-name-and-label">
-              <p class="d-none d-md-block">
+              <p class="d-none d-lg-block">
                 User Info
               </p>
               <div><input class="text-entry" id="username" type="text" placeholder="username"></div>
             </div>
 
-            <div class="join-leave-buttons mt-md-3 ml-4 ml-md-0" id="join-leave-buttons">
+            <div class="join-leave-buttons mt-lg-3 ml-4 ml-lg-0" id="join-leave-buttons">
               <button disabled id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
               <button disabled id="leave" type="button" class="btn btn-primary btn-sm">Leave</button>
             </div>
@@ -57,7 +56,7 @@
 
 
           <div class="controls">
-            <p class="controls-all-cols mb-0 d-none d-md-block">
+            <p class="controls-all-cols mb-0 d-none d-lg-block">
               Audio Controls
             </p>
 
@@ -97,7 +96,7 @@
 
 
           <div class="rooms">
-            <p class="mb-0 d-none d-md-block">Demo Rooms</p>
+            <p class="mb-0 d-none d-lg-block">Demo Rooms</p>
             <div class="rooms-btns">
               <button disabled id="room-conf-table" type="button" class="rooms-button">
                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
