--- a/example/index.html
+++ b/example/index.html
@@ -55,45 +55,44 @@
           </div>
 
 
-          <div class="controls">
-            <p class="controls-all-cols mb-0 d-none d-lg-block">
-              Audio Controls
-            </p>
+          <div class="controls align-items-end d-md-flex d-lg-block flex-column flex-md-row">
+            <div>
+              <p class="controls-all-cols d-none d-lg-block">
+                Audio Controls
+              </p>
 
-            <div class="d-flex align-items-center">
-              <div class="d-flex align-items-center">
-                <label class="switch">
-                  <input id="mute" type="checkbox" checked>
-                  <span class="slider round"></span>
-                </label>
-                <p class="control-label mb-0 ml-2">Mute</p>
-              </div>
+              <div class="d-flex align-items-end align-items-lg-center">
+                <div class="d-flex align-items-center">
+                  <label class="switch">
+                    <input id="mute" type="checkbox" checked>
+                    <span class="slider round"></span>
+                  </label>
+                  <p class="control-label mb-0 ml-2">Mute</p>
+                </div>
 
-              <div class="d-flex align-items-center ml-2">
-                <label class="switch">
-                  <input id="aec" type="checkbox">
-                  <span class="slider round"></span>
-                </label>
-                <p class="control-label mb-0 ml-2">AEC</p>
+                <div class="d-flex align-items-center ml-2">
+                  <label class="switch">
+                    <input id="aec" type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
+                  <p class="control-label mb-0 ml-2">AEC</p>
+                </div>
               </div>
             </div>
 
-
-
-            <div>
+            <div class="threshold mt-lg-3 flex-md-column-reverse d-md-flex">
 
               <div class="controls-all-cols">
                 <input id="threshold" style="width: 100%;" type="range" min=-96
                   max=0 value=-40 step=1>
               </div>
-              <div class="controls-all-cols d-flex mt-3">
-                <p class="control-label mb-0 ">Noise Threshold:</p>
-                <output class="controls-all-cols control-label mb-0 ml-2" id="threshold-value">-40</output>
+              <div class="controls-all-cols d-flex mt-lg-2 justify-content-between">
+                <p class="control-label mb-0 mt-2 mt-md-0 mb-md-2">Mic Threshold</p>
+                <output class="controls-all-cols control-label mb-0 mt-2 mt-md-0 mb-md-2 ml-2" id="threshold-value">-40</output>
               </div>
             </div>
 
           </div>
-
 
           <div class="rooms">
             <p class="mb-0 d-none d-lg-block">Demo Rooms</p>
