--- a/example/index.html
+++ b/example/index.html
@@ -153,7 +153,8 @@
 
         </div>
 
-        <div id="canvas-container" class="canvas-group" style="height: 100%">
+        <div id="canvas-container" class="canvas-group position-relative" style="height: 100%">
+          <img class="logo" src="High-Fidelity_Imagery_Brand_Logo_Top-Right-Lockup_Black_v01-01.svg" alt="High Fidelity">
           <canvas id="canvas" oncontextmenu="return false;"></canvas>
         </div>
 
