Experimental testing of forced SFU reconnect

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button id="leave" type="button" class="btn btn-primary btn-sm" disabled>Leave</button>
                     <button id="aec" type="button" class="btn btn-primary btn-sm">AEC</button>
                     <button id="mute" type="button" class="btn btn-primary btn-sm">Mute</button>
-                    <button id="sound" type="button" class="btn btn-primary btn-sm" style="float:right;" hidden>Sound</button>
+                    <button id="sound" type="button" class="btn btn-primary btn-sm" style="float:right;" hidden>SFU</button>
                     <input id='threshold' type='range' min=-96 max=0 value=-40 step=1>Threshold=<output id="threshold-value">-40</output>
                 </div>
             </form>
