--- a/example/index.html
+++ b/example/index.html
@@ -165,7 +165,7 @@
   <script src="./vendor/jquery-3.4.1.min.js"></script>
   <script src="./vendor/bootstrap.bundle.min.js"></script>
   <script src="./vendor/Sortable.min.js"></script>
-  <script src="./vendor/AgoraRTC_N-4.12.2.js"></script>
+  <!-- <script src="./vendor/AgoraRTC_N-4.12.2.js"></script> -->
   <script type="module" src="./audio-room.js"></script>
 
 </body>
