hook-up broadcasts

--- a/example/index.html
+++ b/example/index.html
@@ -137,6 +137,9 @@
             </div>
           </div>
 
+          <div id="my-peak-meter" style="padding: 0; margin: 0;"></div>
+
+
         </div>
 
         <div id="canvas-container" class="canvas-group position-relative" style="height: 100%">
@@ -167,6 +170,7 @@
   <script src="./vendor/Sortable.min.js"></script>
   <!-- <script src="./vendor/AgoraRTC_N-4.12.2.js"></script> -->
   <script type="module" src="./audio-room.js"></script>
+  <!-- <script src="https://esonderegger.github.io/web-audio-peak-meter/web-audio-peak-meter-2.0.0.min.js"></script> -->
 
 </body>
 
