--- a/example/index.html
+++ b/example/index.html
@@ -137,7 +137,7 @@
             </div>
           </div>
 
-          <div id="my-peak-meter" style="padding: 0; margin: 0;"></div>
+          <!-- <div id="my-peak-meter" style="padding: 0; margin: 0;"></div> -->
 
 
         </div>
