working on local sources

--- a/example/index.html
+++ b/example/index.html
@@ -164,6 +164,7 @@
 
   <img src="listener.svg" class="icon" alt="listener" id="listenerIcon" hidden>
   <img src="source.svg" class="icon" alt="source" id="sourceIcon" hidden>
+  <img src="sound.svg" class="icon" alt="sound" id="soundIcon" hidden>
 
   <script src="./vendor/jquery-3.4.1.min.js"></script>
   <script src="./vendor/bootstrap.bundle.min.js"></script>
