working on local sources

--- a/example/index.html
+++ b/example/index.html
@@ -63,6 +63,15 @@
                   </label>
                   <p class="control-label mb-0 ml-2">AEC</p>
                 </div>
+
+                <div class="d-flex align-items-center ml-2">
+                  <label class="switch">
+                    <input id="local" type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
+                  <p class="control-label mb-0 ml-2">Local</p>
+                </div>
+
               </div>
             </div>
 
