--- a/example/index.html
+++ b/example/index.html
@@ -117,7 +117,7 @@
                 </svg>
                 <div>Music</div>
               </button>
-              <button disabled id="room-bar" type="button" class="rooms-button">
+              <button disabled id="room-bar-local" type="button" class="rooms-button">
                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="17" cy="17" r="17" fill="white" />
                   <g clip-path="url(#clip0_794_131)">
