hide local-source switch in rooms with no local sources

--- a/example/index.html
+++ b/example/index.html
@@ -65,11 +65,11 @@
                 </div>
 
                 <div class="d-flex align-items-center ml-2">
-                  <label class="switch">
+                  <label id="local-source-switch-label" class="switch">
                     <input id="local" type="checkbox">
                     <span class="slider round"></span>
                   </label>
-                  <p class="control-label mb-0 ml-2">Local</p>
+                  <p id="local-source-switch-p" class="control-label mb-0 ml-2">Local</p>
                 </div>
 
               </div>
