original runs again

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <script src="./vendor/bootstrap.bundle.min.js"></script>
         <script src="./vendor/AgoraRTC_N-4.15.0.js"></script>
         <script src="./canvas-control.js"></script>
+        <script src="./hifi-audio.js"></script>
         <script src="./index.js"></script>
-        <script src="./transform.js"></script>
+        <script src="./worker-transform.js"></script>
     </body>
 </html>
