--- a/example/index.html
+++ b/example/index.html
@@ -65,6 +65,14 @@
                 </div>
 
                 <div class="d-flex align-items-center ml-2">
+                  <label class="switch">
+                    <input id="rc" type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
+                  <p class="control-label mb-0 ml-2">rc</p>
+                </div>
+
+                <div class="d-flex align-items-center ml-2">
                   <label id="local-source-switch-label" class="switch">
                     <input id="local" type="checkbox">
                     <span class="slider round"></span>
