--- a/example/index.html
+++ b/example/index.html
@@ -107,8 +107,7 @@
                 </svg>
                 <div>Conference</div>
               </button>
-              <!--
-              <button disabled id="room-quad-music" type="button" class="rooms-button">
+              <button disabled id="room-quad-music" type="button" class="rooms-button" hidden>
                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle id="room-quad-music-circle" cx="17" cy="17" r="17"/>
                   <g clip-path="url(#clip0_779_279)">
@@ -124,7 +123,6 @@
                 </svg>
                 <div>Music</div>
               </button>
-              -->
               <button disabled id="room-bar-local" type="button" class="rooms-button">
                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle id="room-bar-local-circle" cx="17" cy="17" r="17" fill="white" />
